--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "dts-css-modules-loader": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-google-charts": "^4.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
