--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "css-loader": "^6.7.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
